--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,9 @@ permalink: /news/:year/:month/:day/:title/
 
 timezone: Asis/Shanghai
 
+author: rancho
+email: iotcoder@gmail.com
+
 name: rancho • An interested coder
 description: Git blogs 
 url: https://binbin666.github.io
