--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ email: iotcoder@gmail.com
 
 name: rancho • An interested coder
 description: Git blogs 
-url: https://binbin666.github.io
+url: /
 
 logo: images/log@2x.png
 
